<resources>
    <string name="app_name">Assistant</string>
    <string name="yes_please">Yes Please</string>
    <string name="note_update">Update</string>
    <string name="note_delete">Delete</string>
    <string name="indieflower">IndieFlower.ttf</string>
    <string name="NiconneRegular">Niconne-Regular.ttf</string>
    <string name="CourgetteRegular">Courgette-Regular.ttf</string>
    <string name="verdana">Verdana.ttf</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
</resources>
