<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccentTrans">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center_horizontal"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/menuItemsColor" />
            <!--android:background="#80"-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/calendar" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#FFF">

                    <com.example.anish.assistant.assistantHelper.CustomTools.CEditText
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Topic"
                        android:textColor="#FFFFFF"
                        app:font="@string/verdana" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColorHint="#FFF">

                    <com.example.anish.assistant.assistantHelper.CustomTools.CEditText
                        android:id="@+id/txt_desc"
                        style="@style/big_EditText_10Lines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_btn"
                        android:inputType="textCapSentences|textMultiLine"
                        android:padding="10dp"
                        android:scrollbars="vertical"
                        android:textColor="#FFFFFF"
                        app:font="@string/CourgetteRegular" />
                    <!--android:hint="Description"-->
                </android.support.design.widget.TextInputLayout>

                <!--    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:textColorHint="#FFF">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Mobile Number"
                            android:textColor="#FFFFFF" />
                    </android.support.design.widget.TextInputLayout>-->


                <LinearLayout
                    android:id="@+id/layout_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_weight="1"
                        android:text="Reminder"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btn_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textSize="17dp"
                        android:text="@string/date"
                        android:onClick="clickDate"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="clickTime"
                        android:textSize="17dp"
                        android:background="@android:color/transparent"
                        android:text="@string/time"
                        android:textColor="@color/white" />
                </LinearLayout>
                <com.spark.submitbutton.SubmitButton
                    android:id="@+id/btn_update"
                    android:onClick="clickUpdate"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/note_update"
                    android:textColor="@color/white"
                    app:sub_btn_background="#009e9e"
                    app:sub_btn_duration="1000"
                    app:sub_btn_line_color="#009e9e"
                    app:sub_btn_ripple_color="#673AB7"
                    app:sub_btn_tick_color="@color/white" />


                <com.spark.submitbutton.SubmitButton
                    android:id="@+id/btn_delete"
                    android:onClick="clickDelete"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/note_delete"
                    android:textColor="@color/white"
                    app:sub_btn_background="#009e9e"
                    app:sub_btn_duration="1000"
                    app:sub_btn_line_color="#009e9e"
                    app:sub_btn_ripple_color="#673AB7"
                    app:sub_btn_tick_color="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>